[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-python"
version = "0.1.0"
authors = [
  { name="Jaime Ruiz Serra", email="jrs271828@gmail.com" },
]
description = "Python implementation of The vOICe (seeingwithsound.com)."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "opencv-python"
]

[project.urls]
"Homepage" = "https://github.com/RuizSerra/vOICe-python"
"Bug Tracker" = "https://github.com/RuizSerra/vOICe-python/issues"
